--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-social-icons": "^6.7.0",
+    "recoil": "^0.7.7",
     "sanity": "^3.20.1",
+    "sonner": "^1.2.4",
     "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
