--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-dialog": "^1.0.5",
